# worldstat

./: Cargo.toml  README.md
.github/workflows/: check.yml  publish.yml
examples/: player.rs  stats.rs  world.rs
src/: lib.rs  util.rs
src/context/: mod.rs
src/level/: mod.rs
src/player/: advancements.rs  api.rs  mod.rs  player_data.rs  statistics.rs
src/world/: mod.rs
worldstat/: Cargo.toml  README.md
worldstat-cli/: Cargo.toml
worldstat/examples/: player.rs  stats.rs  world.rs
worldstat/src/: lib.rs  util.rs
worldstat/src/context/: mod.rs
worldstat/src/player/: mod.rs  statistics.rs
worldstat/src/world/: mod.rs
