[package]
name = "worldstat"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
fastnbt = "2.5.0"
gumdrop = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.134"
serde_with = "3.12.0"
ureq = "2.12.1"

[lib]
name = "worldstat"
path = "src/lib.rs"

[[bin]]
name = "worldstat"
path = "src/bin.rs"
